; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/firewire/extr_fwohci.c_fwohci_task_busreset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/firewire/extr_fwohci.c_fwohci_task_busreset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fwohci_softc = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* }

@FWBUSRESET = common dso_local global i32 0, align 4
@OHCI_CROMHDR = common dso_local global i32 0, align 4
@OHCI_BUS_OPT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @fwohci_task_busreset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fwohci_task_busreset(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.fwohci_softc*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.fwohci_softc*
  store %struct.fwohci_softc* %7, %struct.fwohci_softc** %5, align 8
  %8 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %9 = getelementptr inbounds %struct.fwohci_softc, %struct.fwohci_softc* %8, i32 0, i32 0
  %10 = call i32 @FW_GLOCK(%struct.TYPE_4__* %9)
  %11 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %12 = getelementptr inbounds %struct.fwohci_softc, %struct.fwohci_softc* %11, i32 0, i32 0
  %13 = load i32, i32* @FWBUSRESET, align 4
  %14 = call i32 @fw_busreset(%struct.TYPE_4__* %12, i32 %13)
  %15 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %16 = load i32, i32* @OHCI_CROMHDR, align 4
  %17 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %18 = getelementptr inbounds %struct.fwohci_softc, %struct.fwohci_softc* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @ntohl(i32 %22)
  %24 = call i32 @OWRITE(%struct.fwohci_softc* %15, i32 %16, i32 %23)
  %25 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %26 = load i32, i32* @OHCI_BUS_OPT, align 4
  %27 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %28 = getelementptr inbounds %struct.fwohci_softc, %struct.fwohci_softc* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 2
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @ntohl(i32 %32)
  %34 = call i32 @OWRITE(%struct.fwohci_softc* %25, i32 %26, i32 %33)
  %35 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %36 = getelementptr inbounds %struct.fwohci_softc, %struct.fwohci_softc* %35, i32 0, i32 0
  %37 = call i32 @FW_GUNLOCK(%struct.TYPE_4__* %36)
  ret void
}

declare dso_local i32 @FW_GLOCK(%struct.TYPE_4__*) #1

declare dso_local i32 @fw_busreset(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @OWRITE(%struct.fwohci_softc*, i32, i32) #1

declare dso_local i32 @ntohl(i32) #1

declare dso_local i32 @FW_GUNLOCK(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
